[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet 1st learning project 'Brain-games', includes several logical games."
authors = ["Andrey Gavrilo <gavriloff.andrew@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ricerockett/python-project-49"
packages = [
  { include = "brain_games" },
]

classifiers = [
    "Development Status :: 3 - Alpha",  
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Topic :: Education",
    "Topic :: Games/Entertainment"
]


[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
